# dpdk-rp1-tests

./: CMakeLists.txt  README.md  setup_env.sh
common/: affinity.c  csv.c  logging.c  packet.c  stats.c  timer.c
include/: affinity.h  benchmark.h  config.h  csv.h  logging.h  packet.h  stats.h  timer.h
results/: latency.csv  rx_throughput.csv  tx_throughput.csv
scripts/: test_tcp_latency.sh  test_tcp_throughput.sh  test_udp_throughput.sh
tcp/: latency.c  latency.h  latency_client.c  latency_server.c  receiver.c  sender.c  tcp_client.c  tcp_client.h  tcp_server.c  tcp_server.h  tcp_transport.c  tcp_transport.h  throughput.c  throughput.h  throughput_receiver.c  throughput_sender.c
udp/: latency.c  latency.h  latency_client.c  latency_server.c  throughput.c  throughput.h  throughput_receiver.c  throughput_sender.c  udp_transport.c  udp_transport.h
